2011-11-12  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/ieee754/ldbl-96/e_hypotl.c (__ieee754_hypotl): Avoid warning
	from unused variable.

	* sysdeps/generic/sysdep.h: Clean up, pretty print, use dwarf2.h for
	DWARF definitions.
	* sysdeps/generic/dwarf2.h: Don't define enums when using the file
	for assembling.

	* elf/dl-iteratephdr.c [!SHARED] (__dl_iterate_phdr): Don't iterate
	over namespaces.

	* sunrpc/rpc_prot.c (rejected): Fix case value.

	* sysdeps/unix/sysv/linux/internal_statvfs.c (INTERNAL_STATVFS): Use
	unsigned long long int to avoid warnings in shift.

	* posix/regex_internal.c (re_string_reconstruct): Actually use result
	of use of trans.
	* posix/regex_internal.h (re_string_wchar_at): Remove temporary
	variable tmp.

	* sysdeps/i386/i686/multiarch/wcscmp-c.c: Avoid warning.
	* sysdeps/i386/i686/multiarch/wcslen-c.c: Likewise.
	* sysdeps/i386/i686/multiarch/wmemcmp-c.c: Likewise.

	* nis/nis_table.c (nis_list): Use variable of correct type for
	result of __follow_path call.

2011-11-07  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/math_private.h: Using inline assembly version
	of math functions ceil, trunc, floor, round, and sqrt, when
	avaliable on the platform.
	* sysdeps/powerpc/fpu/e_sqrt.c: Undefine __ieee754_sqrt to avoid
	name clash.
	* sysdeps/powerpc/fpu/e_sqrtf.c: Likewise.
	* sysdeps/powerpc/powerpc64/fpu/e_sqrt.c: Likewise.
	* sysdeps/powerpc/powerpc64/fpu/e_sqrtf.c: Likewise.

2011-10-30  Marek Polacek  <mpolacek@redhat.com>

	* libio/wfileops.c (_IO_wfile_underflow_mmap): Remove unused variable.
	* sysdeps/ieee754/dbl-64/mpsqrt.c (__mpsqrt): Likewise.

2011-11-11  Roland McGrath  <roland@hack.frob.com>

	* include/unistd.h: Fix __readlink return type.
	Reported by Chris Metcalf <cmetcalf@tilera.com>.

2011-11-11  Ulrich Drepper  <drepper@gmail.com>

	* stdlib/ucontext.h: Undo last change for makecontext.

2011-11-11  Andreas Schwab  <schwab@redhat.com>
