@@ -108,9 +108,9 @@ __ieee754_j0l (long double x)
 {
   long double z, s, c, ss, cc, r, u, v;
   int32_t ix;
-  u_int32_t se, i0, i1;
+  u_int32_t se;
 
-  GET_LDOUBLE_WORDS (se, i0, i1, x);
+  GET_LDOUBLE_EXP (se, x);
   ix = se & 0x7fff;
   if (__builtin_expect (ix >= 0x7fff, 0))
     return one / (x * x);
